# esp_avb_simple_talker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  atdecc.c  atdecc.h  avtp.c  avtp.h  config.c  config.h  gptp.c  gptp.h  main.c  network.c  network.h  talker.c  talker.h  utils.c  utils.h
